# football-group

./: .gitignore  Cargo.toml  README.md  index.html  players.csv
.github/workflows/: deploy.yml
migrations/: 001_initial.sql  002_add_avatar.sql  003_add_player_stats.sql  004_multi_position.sql
src/: error.rs  main.rs  models.rs
src/handlers/: games.rs  mod.rs  players.rs  reports.rs  uploads.rs
web/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
web/public/: reports.csv
web/src/: App.vue
web/src/api/: index.ts
web/src/assets/: main.css
web/src/components/: AppModal.vue  AvatarUploadInput.vue  GameHistory.vue  MatchReports.vue  PlayerAvatar.vue  PlayerCard.vue  PlayerRoster.vue  PlayerSearch.vue  PlayerStatsBadge.vue  StatsEditor.vue  TeamResult.vue
web/src/components/modals/: AddPlayerModal.vue  EditPlayerModal.vue  SaveGameModal.vue
web/src/lib/: storage.ts
web/src/stores/: games.ts  players.ts  teams.ts
web/src/types/: index.ts
web/src/utils/: positions.ts  stats.ts
